--- a/scss/starter.scss
+++ b/scss/starter.scss
@@ -85,6 +85,7 @@ $enable-shadows: true;
 @import "liquidity";
 @import "bridge";
 @import "priceplan";
+@import "tooptips";
 @import "header";
 @import "dropd";
 @import "footer";
