--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -42,6 +42,8 @@ $progress-bg: #e9edf3 !default;
 $progress-border-radius: 7px !default;
 $progress-box-shadow: none !default;
 
+$nav-tabs-link-active-color: #041843 !default;
+
 $modal-content-border-radius: 10px !default;
 
 $container-max-widths: (
