--- a/scss/starter.scss
+++ b/scss/starter.scss
@@ -86,6 +86,7 @@ $enable-shadows: true;
 @import "bridge";
 @import "priceplan";
 @import "tooptips";
+@import "inputs";
 @import "header";
 @import "dropd";
 @import "footer";
