--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -49,7 +49,7 @@ $modal-content-border-radius: 10px !default;
 $container-max-widths: (
   sm: 100%,
   md: 100%,
-  lg: 960px,
+  lg: 100%,
   xl: 1200px,
   //xxl: 1320px
 ) !default;
