--- a/scss/_liquidity.scss
+++ b/scss/_liquidity.scss
@@ -101,6 +101,7 @@
       tr {
         th,
         td {
+          vertical-align: top;
           padding-right: 5px;
           padding-left: 5px;
         }
@@ -109,10 +110,21 @@
     }
   }
   @media only screen and (max-width: 450px) {
+    table.dataTable tbody th, table.dataTable tbody td {
+      padding: 10px 5px;
+    }
+
     table {
       font-size: 12px;
     }
   }
+  @media only screen and (max-width: 374px) {
+    table {
+      font-size: 11px;
+    }
+  }
+
+
   .cell {
     font-weight: 500;
     .trades-one {
