--- a/scss/_liquidity.scss
+++ b/scss/_liquidity.scss
@@ -94,6 +94,76 @@
         display: block;
       }
     }
+
+    .table-liquidity {
+      thead {
+        tr {
+          display: flex;
+          flex-wrap: wrap;
+          th {
+            width: 25%;
+          }
+        }
+      }
+      tbody {
+        tr {
+          display: flex;
+          flex-wrap: wrap;
+          position: relative;
+          padding-top: 5px;
+          padding-bottom: 5px;
+          padding-left: 5px;
+          padding-right: 25%;
+          border-bottom: solid 1px #eee;
+          td {
+            width: 46%;
+            //padding: 0 10px;
+            padding: 0 2px;
+            border: none;
+            .td-span span {
+              display: inline;
+            }
+          }
+          .el-table_1_column_1 {
+            order: 1;
+            text-align: left;
+          }
+          .el-table_1_column_2 {
+            order: 4;
+            text-align: right;
+          }
+          .el-table_1_column_4 {
+            order: 3;
+          }
+          .el-table_1_column_5 {
+            position: absolute;
+            right: 0;
+            width: 25%;
+            top: 50%;
+            transform: translateY(-50%);
+            .cell {
+              background: $success;
+              border-radius: 4px;
+              color: white;
+              margin-right: 5px;
+              .apy-class {
+                font-size: 14px;
+                justify-content: center;
+                align-content: center;
+                padding-top: 5px;
+                padding-bottom: 5px;
+              }
+            }
+          }
+          .el-table_1_column_6 {
+            order: 2;
+          }
+        }
+      }
+    }
+
+
+
   }
   @media only screen and (max-width: 600px) {
     table {
@@ -111,19 +181,22 @@
   }
   @media only screen and (max-width: 450px) {
     table.dataTable tbody th, table.dataTable tbody td {
-      padding: 10px 5px;
+      //padding: 10px 5px;
     }
     table {
       font-size: 12px;
     }
   }
   @media only screen and (max-width: 373px) {
-    table.dataTable tbody th, table.dataTable tbody td {
-      padding: 10px 2px;
+    .table-liquidity tbody tr .el-table_1_column_5 .cell .apy-class {
+      font-size: 12px;
     }
-    table {
-      font-size: 10px;
+
+
+    .table-liquidity tbody tr td {
+      //padding: 0;
     }
+
   }
 
 
