--- a/scss/_liquidity.scss
+++ b/scss/_liquidity.scss
@@ -105,7 +105,7 @@
           }
         }
       }
-      tbody {
+      tbody, thead {
         tr {
           display: flex;
           flex-wrap: wrap;
@@ -115,8 +115,8 @@
           padding-left: 5px;
           padding-right: 25%;
           border-bottom: solid 1px #eee;
-          td {
-            width: 46%;
+          td, th {
+            width: 46% !important;
             //padding: 0 10px;
             padding: 0 2px;
             border: none;
@@ -124,9 +124,17 @@
               display: inline;
             }
           }
+          .th-sm.el-table_1_column_1 {
+            text-align: left;
+          }
           .el-table_1_column_1 {
             order: 1;
-            text-align: left;
+            text-align: left !important;
+          }
+          .th-sm.el-table_1_column_2 {
+            span {
+              padding-right: 20px;
+            }
           }
           .el-table_1_column_2 {
             order: 4;
@@ -138,7 +146,7 @@
           .el-table_1_column_5 {
             position: absolute;
             right: 0;
-            width: 25%;
+            width: 25% !important;
             top: 50%;
             transform: translateY(-50%);
             .cell {
@@ -155,8 +163,17 @@
               }
             }
           }
+          .th-sm.el-table_1_column_6 {
+            text-align: right;
+            span {
+              padding-right: 20px;
+            }
+          }
           .el-table_1_column_6 {
             order: 2;
+          }
+          .el-table_1_column_7 {
+            order: 8;
           }
         }
       }
@@ -180,12 +197,14 @@
     }
   }
   @media only screen and (max-width: 450px) {
-    table.dataTable tbody th, table.dataTable tbody td {
-      //padding: 10px 5px;
-    }
     table {
       font-size: 12px;
+      thead {
+        font-size: 11px;
+      }
     }
+
+
   }
   @media only screen and (max-width: 373px) {
     .table-liquidity tbody tr .el-table_1_column_5 .cell .apy-class {
