--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,26 +1,30 @@
-.liquidity-page {
-  .main-header {
-
-  }
-}
-
 .main-header {
   position: absolute;
   z-index: 5;
-  border-bottom: 1px solid hsla(0,0%,100%,.3);
+  border-bottom: 1px solid hsla(0, 0%, 100%, .3);
   .navbar-nav {
     width: 100%;
-    .nav-item {
+    .nav-item .nav-link {
+      font-weight: 500;
+    }
+    .nav-item.w-bage {
+      flex-shrink: 0;
       .nav-link {
-        font-weight: 500;
+        position: relative;
+        img {
+          position: relative;
+          top: -6px;
+          left: 2px;
+          width: 30px;
+          height: 15px;
+        }
       }
     }
   }
   .burger-btn {
-    border: none;
-    padding-left: 0;
     padding-right: 0;
-
+    padding-left: 0;
+    border: none;
     img {
       width: 24px;
       height: 24px;
@@ -29,25 +33,23 @@
   }
   .navbar-brand {
     max-width: 150px;
-
     &:hover {
       transform: rotate(-5deg);
     }
   }
   .btn-heco,
   .btn-connect-wallet {
-    //display: flex;
-    //align-items: center;
     height: 45px;
     padding-top: 0;
     padding-bottom: 0;
+    margin-right: 2px;
+    margin-left: 2px;
     font-family: sans-serif;
-    //font-size: 16px;
     line-height: 45px;
   }
   .btn-connect-wallet {
-    text-align: left;
     line-height: 1;
+    text-align: left;
   }
   .lang_bar {
     img {
@@ -55,11 +57,12 @@
       height: 36px;
     }
   }
+  .config-btn {
+    display: none;
+  }
   @media only screen and (max-width: 1400px) {
-    .nav-item {
-      .nav-link {
-        font-size: 14px;
-      }
+    .nav-item .nav-link {
+      font-size: 14px;
     }
     .btn-heco,
     .btn-connect-wallet {
@@ -68,9 +71,6 @@
     .navbar-brand {
       max-width: 120px;
     }
-  }
-  .config-btn {
-    display: none;
   }
   @media only screen and (max-width: 1200px) {
     .navbar-nav {
@@ -84,9 +84,9 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      margin-left: 10px;
-      height: 45px;
       width: 45px;
+      height: 45px;
+      margin-left: 10px;
       padding: 0;
       img {
         width: 17px;
@@ -96,9 +96,9 @@
   }
   @media only screen and (max-width: 768px) {
     .btn-heco {
+      height: 28px;
       padding-right: 6px;
       padding-left: 6px;
-      height: 28px;
       line-height: 28px;
       color: #041843;
       background: #f8f9fa linear-gradient(180deg, #f9fafb, #f8f9fa) repeat-x;
@@ -110,52 +110,27 @@
       }
     }
     .config-btn {
-      height: 28px;
       width: 28px;
+      height: 28px;
     }
   }
 }
 
-
-
-
-
-
-
-
-
-
-
-.w-bage {
-  img {
-    position: relative;
-    width: 30px;
-    height: 15px;
-    top: -6px;
-    left: 2px;
-  }
-}
-
 ////mobile header
-
 .modal {
-
   .modal-header {
     border-bottom: none;
   }
-
   .modal-body {
-
     .select-language {
       margin-bottom: 30px;
       .select-info {
         width: 33.33%;
         height: 50px;
+        font-size: 14px;
+        font-weight: 500;
         line-height: 50px;
         text-align: center;
-        font-size: 14px;
-        //color: #48587b;
-        font-weight: 500;
         border: 1px solid #dce3ec;
         a {
           color: #48587b;
@@ -169,17 +144,15 @@
         }
       }
     }
-
     .social-list-nav {
       li {
+        display: flex;
         width: 50%;
         height: 60px;
-        display: flex;
         align-items: center;
         a {
-          //font-size: 14px;
-          color: #48587b;
           font-weight: 500;
+          color: #48587b;
         }
         img {
           width: 20px;
@@ -187,7 +160,6 @@
           margin-right: 10px;
         }
       }
-
     }
     .aff-emai {
       font-size: 14px;
@@ -196,7 +168,6 @@
     }
   }
 }
-
 
 .lang-bar-button {
   padding: .5rem 0;
