--- a/scss/_homepage.scss
+++ b/scss/_homepage.scss
@@ -1,17 +1,21 @@
 .header-section {
-  font-size: 40px;
-  color: #041843;
-  font-weight: 700;
   margin-bottom: 100px;
+  font-size: 40px;
+  font-weight: 700;
+  color: #041843;
+  @media only screen and (max-width: 768px) {
+    margin-bottom: 50px;
+    font-size: 28px;
+  }
 }
 
 .home-assets {
   transform: translateY(-115px);
   .container-color {
-    box-shadow: -1px -1px 1px 0 rgba(255, 255, 255, .3);
+    padding: 50px;
     background: linear-gradient(180deg, #4e60a7, #9baece 14%, rgba(226, 242, 252, .73) 33%, rgba(231, 239, 252, .71));
     border-radius: 20px;
-    padding: 50px;
+    box-shadow: -1px -1px 1px 0 rgba(255, 255, 255, .3);
     @media only screen and (max-width: 768px) {
       padding: 15px 12px;
     }
@@ -30,8 +34,8 @@
       background-size: cover;
     }
     .amount-number {
-      font-weight: 500;
       padding-right: 10px;
+      font-weight: 500;
     }
     @media only screen and (max-width: 992px) {
       .amount-number {
@@ -40,7 +44,8 @@
       }
     }
     @media only screen and (max-width: 768px) {
-      .text, .amount-unit {
+      .text,
+      .amount-unit {
         font-size: 20px;
       }
     }
@@ -55,30 +60,29 @@
       }
     }
   }
-
   .home-info-pc {
     margin-top: 25px;
     .h-info-item {
-      margin: 0 12px;
-      height: 48px;
-      background: #fffdfa;
-      border-radius: 24px;
-      padding: 0 16px;
       display: flex;
       justify-content: center;
       align-items: center;
+      padding: 0 16px;
+      height: 48px;
+      margin: 0 12px;
+      background: #fffdfa;
+      border-radius: 24px;
       .hi-num {
         margin: 0 5px;
-        font-weight: 500;
         font-size: 18px;
+        font-weight: 500;
       }
       .hi-name {
         margin: 0 5px;
         color: #7d7d7d;
       }
       .icon-img {
-        height: 30px;
         width: 30px;
+        height: 30px;
       }
     }
     @media only screen and (max-width: 992px) {
@@ -87,9 +91,9 @@
       }
     }
     @media only screen and (max-width: 768px) {
+      padding: 24px;
       background-color: white;
       border-radius: 8px;
-      padding: 24px;
       .h-info-item {
         position: relative;
         flex-wrap: wrap;
@@ -122,21 +126,16 @@
       }
     }
   }
-
   .price-card {
-    margin-top: 24px;
     padding: 24px;
+    margin-top: 24px;
     background-color: #fff;
     border-radius: 8px;
-    box-shadow: rgba(10, 20, 111, 0.05) 0px 10px 20px 0px, rgba(255, 255, 255, 0.3) 1px 1px 1px 0px;
-
-    .card-item {
-
-    }
+    box-shadow: rgba(10, 20, 111, .05) 0 10px 20px 0, rgba(255, 255, 255, .3) 1px 1px 1px 0;
     .card-item-key {
       font-size: 12px;
-      color: #808eb5;
       font-weight: 500;
+      color: #808eb5;
     }
     .card-item-value {
       font-size: 24px;
@@ -190,12 +189,11 @@
       }
     }
   }
-
   .home-input-wrap {
     margin-top: 27px;
     .input-wrap {
-      background-color: #fff;
       margin-bottom: 30px;
+      background-color: #fff;
       border-radius: 8px;
       header {
         color: white;
@@ -216,12 +214,12 @@
       table {
         width: 100%;
         padding: 0 24px;
-        background-color: #fff;
-        text-align: center;
-        border-radius: 0 0 8px 8px;
-        color: $gray;
         font-weight: 500;
+        color: $gray;
+        text-align: center;
         border-collapse: initial;
+        background-color: #fff;
+        border-radius: 0 0 8px 8px;
         th,
         td {
           width: 23%;
@@ -245,21 +243,19 @@
         }
       }
       header {
-        height: 60px;
-        border-radius: 8px 8px 0 0;
         display: flex;
         justify-content: space-between;
         align-items: center;
         padding: 0 24px;
-
+        height: 60px;
+        border-radius: 8px 8px 0 0;
       }
       .oper-buttons {
-        border: 1px solid #2c72f4;
         color: #2c72f4;
-        border-radius: 4px;
         font-size: 15px;
         font-weight: 500;
-
+        border: 1px solid #2c72f4;
+        border-radius: 4px;
         a {
           min-width: 60px;
           line-height: 26px;
@@ -267,7 +263,6 @@
         }
       }
     }
-
     @media only screen and (max-width: 768px) {
       .operation,
       .operation-ar {
@@ -287,19 +282,16 @@
           }
         }
       }
-
     }
-
   }
-
   .home-input-current {
     margin-top: 27px;
     .current {
       height: 154px;
-      box-shadow: 0 2px 6px 2px rgba(0, 0, 0, .06);
-      border-radius: 8px;
       padding: 30px;
+      border-radius: 8px;
       margin-bottom: 30px;
+      box-shadow: 0 2px 6px 2px rgba(0, 0, 0, .06);
       background: url("../../img/bg/curent1.png") no-repeat 50% 50%;
       background-size: cover;
     }
@@ -319,38 +311,37 @@
     }
     @media only screen and (max-width: 768px) {
       .current {
-        padding: 14px;
         height: auto;
+        padding: 14px;
         .desc {
-          font-size: 12px;
           margin-bottom: .5rem;
+          font-size: 12px;
         }
         .amount {
-          font-size: 18px;
           margin-bottom: .5rem;
+          font-size: 18px;
         }
       }
     }
   }
-
   .home-count-wrap {
-    background: #fff;
-    margin-top: 42px;
     padding: 0 30px;
+    margin-top: 42px;
+    background: #fff;
     border-radius: 8px;
     .tooltip-button {
       display: none;
     }
     .row {
-      border-bottom: 1px solid #dee0ed;
       line-height: 70px;
+      border-bottom: 1px solid #dee0ed;
       &:last-child {
         border-bottom: none;
       }
       .count {
         .desc {
-          color: #7d7d7d;
           font-weight: 500;
+          color: #7d7d7d;
         }
         .amount {
           font-size: 20px;
@@ -387,6 +378,12 @@
         }
       }
     }
+    @media only screen and (max-width: 350px) {
+      font-size: 10px;
+      .row .count .amount {
+        font-size: 13px;
+      }
+    }
   }
   @media only screen and (max-width: 992px) {
     padding: 0 15px;
@@ -397,30 +394,32 @@
 }
 
 .white-section {
-  background-color: white;
   padding: 90px 0;
+  background-color: white;
 }
 
 .home-using {
   .item {
     margin-bottom: 30px;
     .item-icon {
-      margin-bottom: 40px;
+      display: inline-block;
       width: 120px;
       height: 120px;
+      margin-bottom: 40px;
       background-repeat: no-repeat;
       background-size: 100% 100%;
-      display: inline-block;
     }
     .icon-1 {
       background: url("../../img/icon/home-page/home-using/icon-1.png");
-
+      background-size: cover;
     }
     .icon-2 {
       background: url("../../img/icon/home-page/home-using/icon-2.png");
+      background-size: cover;
     }
     .icon-3 {
       background: url("../../img/icon/home-page/home-using/icon-3.png");
+      background-size: cover;
     }
   }
   @media only screen and (max-width: 1200px) {
@@ -431,21 +430,32 @@
       }
     }
   }
+  @media only screen and (max-width: 768px) {
+    .item .item-icon {
+      width: 90px;
+      height: 90px;
+    }
+    .item-title {
+      font-size: 20px;
+    }
+    .item-describe {
+      font-size: 18px;
+    }
+  }
 }
-
 
 .auditing-agency-section,
 .partner-section {
   padding-top: 90px;
   .item {
+    margin-bottom: 30px;
     background-color: #fff;
     border-radius: 10px;
-    margin-bottom: 30px;
     a {
       display: flex;
-      height: 100%;
       align-items: center;
       justify-content: center;
+      height: 100%;
       img {
         filter: grayscale(100%);
         opacity: .5;
@@ -485,15 +495,20 @@
 }
 
 .details-section {
-  padding: 90px 0;
+  padding: 90px 0 120px;
   .wrap {
-    border-radius: 20px;
     padding: 45px 0;
+    border-radius: 20px;
     background: url("../../img/bg/home/details/bg-details.png") no-repeat 50% 50%;
     background-size: cover;
     h2 {
       margin-bottom: 30px;
       color: white;
+    }
+  }
+  @media only screen and (max-width: 768px) {
+    .wrap h2 {
+      font-size: 28px;
     }
   }
 }
@@ -508,25 +523,5 @@
   img {
     width: 12px;
     height: 12px;
-  }
-}
-
-
-//all pages
-.banner-bar {
-  padding: 100px 0 150px;
-  background: url("../../img/liquidity-page/banner-bg.png") 50% 50% no-repeat;
-  background-size: cover;
-  .banner-title {
-    padding-top: 60px;
-    font-weight: 500;
-    font-size: 36px;
-  }
-  .banner-title-describe {
-    margin-top: 16px;
-    font-size: 1.5em;
-    font-weight: 600;
-    line-height: 28px;
-    color: hsla(0, 0%, 100%, .8);
   }
 }
