add page liquidity_mdx

--- a/scss/starter.scss
+++ b/scss/starter.scss
@@ -79,6 +79,7 @@ $enable-shadows: true;
 @import "homepage";
 @import "banner-bar";
 @import "liquidity";
+@import "liquidity_mdx";
 @import "bridge";
 @import "priceplan";
 @import "tooptips";
