--- a/scss/_modal.scss
+++ b/scss/_modal.scss
@@ -1,12 +1,11 @@
-/*Required*/
 @media (max-width: 576px){
   .modal-dialog.modal-dialog-slideout {
-    width: 80%
+    width: 80%;
   }
 }
 @media (max-width: 450px) {
   .modal-dialog.modal-dialog-slideout {
-    width: 90%
+    width: 90%;
   }
 }
 .modal-dialog-slideout {
@@ -15,18 +14,15 @@
   background: #fff;
 }
 .modal.fade .modal-dialog.modal-dialog-slideout {
-  -webkit-transform: translate(-100%,0);
-  transform: translate(-100%,0);
+  transform: translate(-100%, 0);
 }
 .modal.fade.show .modal-dialog.modal-dialog-slideout {
-  -webkit-transform: translate(0,0);
-  transform: translate(0,0);
+  transform: translate(0, 0);
   flex-flow: column;
 }
 .modal-dialog-slideout .modal-content{
   border: 0;
 }
-
 
 .slide-out-panel {
   font-size: 13px;
@@ -36,12 +32,12 @@
     background: #f0f2f3;
     .modal-body {
       .header {
+        padding: 15px 0;
         background: #fff;
         border-radius: 10px;
-        padding: 15px 0;
         .item {
-          text-align: center;
           width: 25%;
+          text-align: center;
           p {
             margin-top: 10px;
             margin-bottom: 0;
@@ -55,15 +51,15 @@
         }
       }
       .content {
-        background: #fff;
-        border-radius: 10px;
         padding: 0 12px;
         margin-top: 16px;
+        background: #fff;
+        border-radius: 10px;
         .item {
-          position: relative;
-          height: 48px;
           display: flex;
           align-items: center;
+          position: relative;
+          height: 48px;
           a {
             display: flex;
             align-items: center;
